--- a/master/genindex.html
+++ b/master/genindex.html
@@ -25,14 +25,18 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html" class="icon icon-home"> dgbowl-schemas
+
+          
+          
+          <a href="index.html" class="icon icon-home">
+            dgbowl-schemas
           </a>
               <div class="version">
                 master
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
-    <input type="text" name="q" placeholder="Search docs" />
+    <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
     <input type="hidden" name="check_keywords" value="yes" />
     <input type="hidden" name="area" value="default" />
   </form>
@@ -56,7 +60,7 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="index.html" class="icon icon-home"></a></li>
+      <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active">Index</li>
       <li class="wy-breadcrumbs-aside">
       </li>
@@ -1359,8 +1363,6 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Dummy.parameters">(dgbowl_schemas.yadg.dataschema_5_0.step.Dummy attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.parameters">(dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem attribute)</a>
-</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.MeasCSV.parameters">(dgbowl_schemas.yadg.dataschema_5_0.step.MeasCSV attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.Parser.parameters">(dgbowl_schemas.yadg.dataschema_5_0.step.Parser attribute)</a>
@@ -1738,6 +1740,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.timestamp.TimeDate.time">(dgbowl_schemas.yadg.dataschema_5_0.timestamp.TimeDate attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.BasicCSV.Params.timestamp">timestamp (dgbowl_schemas.yadg.dataschema_4_0.step.BasicCSV.Params attribute)</a>
 
       <ul>
@@ -1764,8 +1768,6 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.timestamp.Timestamp.timestamp">(dgbowl_schemas.yadg.dataschema_5_0.timestamp.Timestamp attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.At.timestamps">timestamps (dgbowl_schemas.dgpost.recipe_1_0.extract.At attribute)</a>
 </li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.metadata.Metadata.timezone">timezone (dgbowl_schemas.yadg.dataschema_4_0.metadata.Metadata attribute)</a>
@@ -1825,11 +1827,7 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.ElectroChem.Params.transpose">transpose (dgbowl_schemas.yadg.dataschema_4_2.step.ElectroChem.Params attribute)</a>
-
-      <ul>
-        <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.Parameters.transpose">(dgbowl_schemas.yadg.dataschema_5_0.step.ElectroChem.Parameters attribute)</a>
 </li>
-      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.load.Load.type">type (dgbowl_schemas.dgpost.recipe_1_0.load.Load attribute)</a>
 
       <ul>
