--- a/master/dgbowl_schemas.html
+++ b/master/dgbowl_schemas.html
@@ -1760,7 +1760,8 @@
 <span class="w">            </span><span class="nt">&quot;filetype&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
 <span class="w">               </span><span class="nt">&quot;title&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;Filetype&quot;</span><span class="p">,</span>
 <span class="w">               </span><span class="nt">&quot;enum&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span>
-<span class="w">                  </span><span class="s2">&quot;agilent.ch&quot;</span>
+<span class="w">                  </span><span class="s2">&quot;agilent.ch&quot;</span><span class="p">,</span>
+<span class="w">                  </span><span class="s2">&quot;marda:agilent-ch&quot;</span>
 <span class="w">               </span><span class="p">],</span>
 <span class="w">               </span><span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;string&quot;</span>
 <span class="w">            </span><span class="p">},</span>
@@ -1790,7 +1791,8 @@
 <span class="w">            </span><span class="nt">&quot;filetype&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
 <span class="w">               </span><span class="nt">&quot;title&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;Filetype&quot;</span><span class="p">,</span>
 <span class="w">               </span><span class="nt">&quot;enum&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span>
-<span class="w">                  </span><span class="s2">&quot;agilent.dx&quot;</span>
+<span class="w">                  </span><span class="s2">&quot;agilent.dx&quot;</span><span class="p">,</span>
+<span class="w">                  </span><span class="s2">&quot;marda:agilent-dx&quot;</span>
 <span class="w">               </span><span class="p">],</span>
 <span class="w">               </span><span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;string&quot;</span>
 <span class="w">            </span><span class="p">},</span>
@@ -1870,7 +1872,9 @@
 <span class="w">                     </span><span class="nt">&quot;fusion.json&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Fusion_json&quot;</span><span class="p">,</span>
 <span class="w">                     </span><span class="nt">&quot;fusion.zip&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Fusion_zip&quot;</span><span class="p">,</span>
 <span class="w">                     </span><span class="nt">&quot;agilent.ch&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Agilent_ch&quot;</span><span class="p">,</span>
+<span class="w">                     </span><span class="nt">&quot;marda:agilent-ch&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Agilent_ch&quot;</span><span class="p">,</span>
 <span class="w">                     </span><span class="nt">&quot;agilent.dx&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Agilent_dx&quot;</span><span class="p">,</span>
+<span class="w">                     </span><span class="nt">&quot;marda:agilent-dx&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Agilent_dx&quot;</span><span class="p">,</span>
 <span class="w">                     </span><span class="nt">&quot;agilent.csv&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;#/definitions/Agilent_csv&quot;</span>
 <span class="w">                  </span><span class="p">}</span>
 <span class="w">               </span><span class="p">},</span>
@@ -2202,7 +2206,8 @@
 <span class="w">            </span><span class="nt">&quot;filetype&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
 <span class="w">               </span><span class="nt">&quot;title&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;Filetype&quot;</span><span class="p">,</span>
 <span class="w">               </span><span class="nt">&quot;enum&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span>
-<span class="w">                  </span><span class="s2">&quot;phi.spe&quot;</span>
+<span class="w">                  </span><span class="s2">&quot;phi.spe&quot;</span><span class="p">,</span>
+<span class="w">                  </span><span class="s2">&quot;marda:phi-spe&quot;</span>
 <span class="w">               </span><span class="p">],</span>
 <span class="w">               </span><span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;string&quot;</span>
 <span class="w">            </span><span class="p">},</span>
@@ -2268,7 +2273,8 @@
 <span class="w">            </span><span class="nt">&quot;filetype&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
 <span class="w">               </span><span class="nt">&quot;title&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;Filetype&quot;</span><span class="p">,</span>
 <span class="w">               </span><span class="nt">&quot;enum&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span>
-<span class="w">                  </span><span class="s2">&quot;panalytical.xrdml&quot;</span>
+<span class="w">                  </span><span class="s2">&quot;panalytical.xrdml&quot;</span><span class="p">,</span>
+<span class="w">                  </span><span class="s2">&quot;marda:panalytical-xrdml&quot;</span>
 <span class="w">               </span><span class="p">],</span>
 <span class="w">               </span><span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;string&quot;</span>
 <span class="w">            </span><span class="p">},</span>
