deploy: fd441d430dab6c1875cf1d1e62a2fae0c104a29b

--- a/master/dgbowl_schemas.yadg.dataschema_4_2.html
+++ b/master/dgbowl_schemas.yadg.dataschema_4_2.html
@@ -5944,7 +5944,7 @@ stop working in <code class="docutils literal notranslate"><span class="pre">yad
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2022, dgbowl authors.</p>
+    <p>&#169; Copyright 2022 - 2023, dgbowl authors.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
