deploy: d70f1f462be54d0c219f11472bad1cdcf64f4eb0

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -118,6 +118,8 @@
 </li>
         <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.load.Load.as_">(dgbowl_schemas.dgpost.recipe_2_1.load.Load attribute)</a>
 </li>
+        <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot.as_">(dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.plot.PlotSave.as_">(dgbowl_schemas.dgpost.recipe_2_1.plot.PlotSave attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.save.Save.as_">(dgbowl_schemas.dgpost.recipe_2_1.save.Save attribute)</a>
@@ -183,6 +185,8 @@
         <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.load.Load.check">(dgbowl_schemas.dgpost.recipe_2_1.load.Load attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.load.Load.check_is_deprecated">check_is_deprecated() (dgbowl_schemas.dgpost.recipe_2_1.load.Load class method)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.At.check_one_input">check_one_input() (dgbowl_schemas.dgpost.recipe_1_0.extract.At class method)</a>
 
       <ul>
@@ -1439,10 +1443,6 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot.on">on (dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot attribute)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.output">output (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
 
       <ul>
@@ -1941,6 +1941,10 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.timestamp.TimeDate.time">(dgbowl_schemas.yadg.dataschema_5_0.timestamp.TimeDate attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot.timedelta">timedelta (dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot.timestamp">timestamp (dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot attribute)</a>
 
       <ul>
@@ -1969,8 +1973,6 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.timestamp.Timestamp.timestamp">(dgbowl_schemas.yadg.dataschema_5_0.timestamp.Timestamp attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.At.timestamps">timestamps (dgbowl_schemas.dgpost.recipe_1_0.extract.At attribute)</a>
 
       <ul>
@@ -2106,6 +2108,8 @@
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.transform.Transform.using">using (dgbowl_schemas.dgpost.recipe_1_0.transform.Transform attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot.using">(dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.transform.Transform.using">(dgbowl_schemas.dgpost.recipe_2_1.transform.Transform attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.externaldate.ExternalDate.using">(dgbowl_schemas.yadg.dataschema_4_0.externaldate.ExternalDate attribute)</a>
