deploy: 5048b8e0b589f5b74342586dc924215fbbdcad7d

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -280,11 +280,15 @@
       <ul>
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe.html#dgbowl_schemas.dgpost.recipe.Pivot.columns">(dgbowl_schemas.dgpost.recipe.Pivot attribute)</a>
 </li>
+        <li><a href="apidoc/dgbowl_schemas.dgpost.recipe.html#dgbowl_schemas.dgpost.recipe.Save.columns">(dgbowl_schemas.dgpost.recipe.Save attribute)</a>
+</li>
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.extract.html#dgbowl_schemas.dgpost.recipe_1_0.extract.Extract.columns">(dgbowl_schemas.dgpost.recipe_1_0.extract.Extract attribute)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_1.extract.html#dgbowl_schemas.dgpost.recipe_2_1.extract.Extract.columns">(dgbowl_schemas.dgpost.recipe_2_1.extract.Extract attribute)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_1.pivot.html#dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot.columns">(dgbowl_schemas.dgpost.recipe_2_1.pivot.Pivot attribute)</a>
+</li>
+        <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_1.save.html#dgbowl_schemas.dgpost.recipe_2_1.save.Save.columns">(dgbowl_schemas.dgpost.recipe_2_1.save.Save attribute)</a>
 </li>
       </ul></li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.extract.html#dgbowl_schemas.dgpost.recipe_1_0.extract.Constant">Constant (class in dgbowl_schemas.dgpost.recipe_1_0.extract)</a>
