--- a/main/genindex.html
+++ b/main/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; dgbowl-schemas 118.dev6 documentation</title>
+  <title>Index &mdash; dgbowl-schemas 119.dev1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/autodoc_pydantic.css" type="text/css" />
@@ -33,7 +33,7 @@
             dgbowl-schemas
           </a>
               <div class="version">
-                118.dev6
+                119.dev1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -1663,18 +1663,20 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="apidoc/dgbowl_schemas.yadg.dataschema.html#dgbowl_schemas.yadg.dataschema.FileType.locale_set_default">locale_set_default() (dgbowl_schemas.yadg.dataschema.FileType class method)</a>
+      <li><a href="apidoc/dgbowl_schemas.yadg.dataschema.html#dgbowl_schemas.yadg.dataschema.StepDefaults.locale_set_default">locale_set_default() (dgbowl_schemas.yadg.dataschema.StepDefaults class method)</a>
 
       <ul>
-        <li><a href="apidoc/dgbowl_schemas.yadg.dataschema.html#dgbowl_schemas.yadg.dataschema.StepDefaults.locale_set_default">(dgbowl_schemas.yadg.dataschema.StepDefaults class method)</a>
-</li>
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType.locale_set_default">(dgbowl_schemas.yadg.dataschema_5_0.filetype.FileType class method)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_0.html#dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults.locale_set_default">(dgbowl_schemas.yadg.dataschema_5_0.stepdefaults.StepDefaults class method)</a>
 </li>
-        <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_1.html#dgbowl_schemas.yadg.dataschema_5_1.filetype.FileType.locale_set_default">(dgbowl_schemas.yadg.dataschema_5_1.filetype.FileType class method)</a>
-</li>
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_1.html#dgbowl_schemas.yadg.dataschema_5_1.stepdefaults.StepDefaults.locale_set_default">(dgbowl_schemas.yadg.dataschema_5_1.stepdefaults.StepDefaults class method)</a>
+</li>
+      </ul></li>
+      <li><a href="apidoc/dgbowl_schemas.yadg.dataschema.html#dgbowl_schemas.yadg.dataschema.FileType.locale_validate_default">locale_validate_default() (dgbowl_schemas.yadg.dataschema.FileType class method)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_1.html#dgbowl_schemas.yadg.dataschema_5_1.filetype.FileType.locale_validate_default">(dgbowl_schemas.yadg.dataschema_5_1.filetype.FileType class method)</a>
 </li>
       </ul></li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe.html#dgbowl_schemas.dgpost.recipe.Load.lowercase_type">lowercase_type() (dgbowl_schemas.dgpost.recipe.Load class method)</a>
@@ -3088,7 +3090,7 @@
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Other Versions</span>
-      v: 118.dev6
+      v: 119.dev1
       <span class="fa fa-caret-down"></span>
     </span>
     <div class="rst-other-versions"> 
