deploy: 9ae320522d641bfc915a666fe0d0e4c82d122b33

--- a/main/genindex.html
+++ b/main/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; dgbowl-schemas 120.dev1 documentation</title>
+  <title>Index &mdash; dgbowl-schemas 121.dev1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/autodoc_pydantic.css" type="text/css" />
@@ -33,7 +33,7 @@
             dgbowl-schemas
           </a>
               <div class="version">
-                120.dev1
+                121.dev1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -504,6 +504,13 @@
 </li>
       </ul></li>
       <li>
+    dgbowl_schemas.dgpost.recipe_2_2
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_2.html#module-dgbowl_schemas.dgpost.recipe_2_2">module</a>
+</li>
+      </ul></li>
+      <li>
     dgbowl_schemas.tomato
 
       <ul>
@@ -650,6 +657,8 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_0.html#module-dgbowl_schemas.yadg.dataschema_4_0.parameters">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.yadg.dataschema_4_0.step
 
@@ -657,8 +666,6 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_0.html#module-dgbowl_schemas.yadg.dataschema_4_0.step">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.yadg.dataschema_4_0.timestamp
 
@@ -2019,6 +2026,8 @@
 </li>
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_1.html#module-dgbowl_schemas.dgpost.recipe_2_1.transform">dgbowl_schemas.dgpost.recipe_2_1.transform</a>
 </li>
+        <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_2.html#module-dgbowl_schemas.dgpost.recipe_2_2">dgbowl_schemas.dgpost.recipe_2_2</a>
+</li>
         <li><a href="apidoc/dgbowl_schemas.tomato.html#module-dgbowl_schemas.tomato">dgbowl_schemas.tomato</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#module-dgbowl_schemas.tomato.payload">dgbowl_schemas.tomato.payload</a>
@@ -3195,6 +3204,8 @@
 </li>
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.Recipe.version">(dgbowl_schemas.dgpost.recipe_2_1.Recipe attribute)</a>
 </li>
+        <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_2.html#dgbowl_schemas.dgpost.recipe_2_2.Recipe.version">(dgbowl_schemas.dgpost.recipe_2_2.Recipe attribute)</a>
+</li>
         <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Payload.version">(dgbowl_schemas.tomato.payload.Payload attribute)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.version">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
@@ -3316,7 +3327,7 @@
   <hr/>
 
   <div role="contentinfo">
-    <p>&#169; Copyright 2022 - 2023, dgbowl authors.</p>
+    <p>&#169; Copyright 2022 - 2025, dgbowl authors.</p>
   </div>
 
   Built with <a href="https://www.sphinx-doc.org/">Sphinx</a> using a
@@ -3332,7 +3343,7 @@
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Other Versions</span>
-      v: 120.dev1
+      v: 121.dev1
       <span class="fa fa-caret-down"></span>
     </span>
     <div class="rst-other-versions"> 
